# Orbis

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_JP.md
_deprecated/: UIOld.hpp
_deprecated/Base/: Panel.hpp  PanelEvent.hpp  PanelHandle.hpp  Widget.hpp  WidgetHandle.hpp
cmake/: OrbisConfig.cmake.in
example/: CMakeLists.txt
example/api_design/: CMakeLists.txt  main.cpp
example/basic_ui/: CMakeLists.txt  main.cpp
example/basics/: CMakeLists.txt  main.cpp
example/counter/: CMakeLists.txt  main.cpp
example/graph/: CMakeLists.txt  main.cpp
example/playground/: CMakeLists.txt  main.cpp
example/slider/: CMakeLists.txt  main.cpp
include/: example.hpp
include/Orbis/: Anim.hpp  Controls.hpp  Data.hpp  Derma.hpp  DermaDrawing.hpp  DermaDrawings.hpp  DermaEvent.hpp  DermaInterface.hpp  DermaOption.hpp  ResourceVault.hpp  UI.hpp  UIEventDispatcher.hpp  UINew.hpp  Utils.hpp
include/Orbis/Base/: Derma.hpp  DermaEvent.hpp  Drawing.hpp  Panel.hpp  PanelHandle.hpp  ResourceVault.hpp  Widget.hpp  WidgetBase.hpp  WidgetHandle.hpp  WidgetInterface.hpp
include/Orbis/Derma/: Derma.hpp  DermaBase.hpp  DermaCommons.hpp  DermaComponents.hpp  DermaDrawings.hpp  DermaEnums.hpp  DermaEvent.hpp  DermaInterface.hpp  DermaOption.hpp  DermaWidgets.hpp
include/Orbis/Migration/: Panel.hpp  Widget.hpp
include/Orbis/SFML/: Shapes.hpp
include/Orbis/System/: Controls.hpp  Drawing.hpp  Drawings.hpp  Enums.hpp  ResourceVault.hpp  Utils.hpp
include/Orbis/UI/: Button.hpp  Canvas.hpp  Slider.hpp  Textbox.hpp  Widget.hpp
include/Orbis/Widgets/: Button.hpp  Canvas.hpp  Slider.hpp  Textbox.hpp  Widget.hpp
include/orbis/: DermaComponent.hpp  DermaEvent.hpp  component.hpp  controls.hpp  derma.hpp  enums.hpp  interface.hpp  ui.hpp  utils.hpp
include/sfml/: shapes.hpp
src/: main.cpp
